# cmake_template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
scripts/: clang-format-all.sh
src/: CMakeLists.txt  MyClass.cpp  MyClass.h  algorithms.cpp  algorithms.h  async.cpp  async.h  main.cpp  smart_pointer.cpp  smart_pointer.h  template.h
src/statemachine/c/: fsm.h  hsm.h  main.c
src/statemachine/c/tmp/: hsm.c  hsm.h
test/: CMakeLists.txt  test_template.cpp  test_template.h
